--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Christian Borg <christian.borg@outlook.com>",
   "private": true,
   "scripts": {
-    "build:scripts": "rollup --config",
+    "build:scripts": "rollup --config --environment NODE_ENV:production",
     "build:styles": "node-sass src/styles/giphy.scss | cleancss --output public/assets/styles/giphy.css",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:styles": "node-sass --source-map true --watch src/styles --output public/assets/styles",
@@ -18,11 +18,17 @@
     "npm-run-all": "^4.0.1",
     "query-string": "^4.3.0",
     "rollup": "^0.41.4",
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^3.2.2",
     "sanitize.css": "^4.1.0"
   },
   "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
     "clean-css": "^3.4.23",
-    "node-sass": "^4.3.0"
+    "node-sass": "^4.3.0",
+    "rollup-plugin-babel": "^2.7.1"
   }
 }
